--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,10 +13,20 @@ android {
         vectorDrawables.useSupportLibrary = true
     }
 
+    signingConfigs {
+        release {
+            storeFile file("HealthAppKeystore.jks")
+            storePassword "123456"
+            keyAlias "HealthApp"
+            keyPassword "123456"
+        }
+    }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
     }
 }
